0.8.0.1:
+ use precompiled header
+ mtextcontrol interface ( faster and no core traffic)
0.8.0.0:
+ x64 Unicode release
! update smileyadd support
- remove unused stuff
+ add unique ID