@@ -1,6 +1,7 @@
 0.8.0.1:
-+ use precompiled header
-+ mtextcontrol interface ( faster and no core traffic)
++ use precompiled header (only source related)
++ mtextcontrol interface (faster and no core traffic)
+
 0.8.0.0:
 + x64 Unicode release
 ! update smileyadd support
